Added CMAKE_PREFIX_PATH for Qt and Catch2

--- a/dphCore/CMakeLists.txt
+++ b/dphCore/CMakeLists.txt
@@ -7,7 +7,7 @@ project(dphCore)
 #message("Autogen dir " ${AUTOGEN_BUILD_DIR})
 
 set(CMAKE_AUTOMOC ON)
-#set(Qt5Core_DIR "C:/Qt/Qt5.11.2/msvc2015/lib/cmake/Qt5Core")
+set(CMAKE_PREFIX_PATH "C:/Qt/5.11.2/msvc2015/lib/cmake" "C:/Install/Catch2/lib/cmake")
 find_package(Qt5Core CONFIG REQUIRED)
 
 set(H_FILES "src/dinner.h"
