--- a/dphCore/test/CMakeLists.txt
+++ b/dphCore/test/CMakeLists.txt
@@ -5,7 +5,7 @@ project(dphCore.Tests)
 find_package(Catch2 REQUIRED)
 
 set(TESTS_CPP test_main.cpp
-			 philparameters_Tests.cpp)
+			 philparameters.tests.cpp)
 			 
 add_executable(${PROJECT_NAME} ${TESTS_CPP})
 target_link_libraries(${PROJECT_NAME} Catch2::Catch2)
