Draft for graphics

--- a/dphGui/CMakeLists.txt
+++ b/dphGui/CMakeLists.txt
@@ -16,11 +16,13 @@ find_package(Qt5 COMPONENTS Core Gui Widgets CONFIG REQUIRED)
 
 # Set source files to build
 set(H_FILES src/mainwindow.h
-			src/logwidget.h)
+			src/logwidget.h
+			src/dinnerscenemanager.h)
 
 set(CPP_FILES	src/mainwindow.cpp
 				src/main.cpp
-				src/logwidget.cpp)
+				src/logwidget.cpp
+				src/dinnerscenemanager.cpp)
 
 set(QRC_FILES	src/resources.qrc)
 
