Settings dialog draft

--- a/dphGui/CMakeLists.txt
+++ b/dphGui/CMakeLists.txt
@@ -19,13 +19,15 @@ set(H_FILES src/mainwindow.h
 			src/logwidget.h
 			src/dinnerscenemanager.h
 			src/settings.h
-			src/settingsserializer.h)
+			src/settingsserializer.h
+			src/settingsdialog.h)
 
 set(CPP_FILES	src/mainwindow.cpp
 				src/main.cpp
 				src/logwidget.cpp
 				src/dinnerscenemanager.cpp
-				src/settingsserializer.cpp)
+				src/settingsserializer.cpp
+				src/settingsdialog.cpp)
 
 set(QRC_FILES	src/resources.qrc)
 
