Added Generated Files source groups

--- a/dphCore/CMakeLists.txt
+++ b/dphCore/CMakeLists.txt
@@ -23,6 +23,9 @@ set(H_FILES "${COMMON_INCLUDE_DIRECTORY}/${dphCore_PROJECT}/dinner.h"
 set(CPP_FILES "src/dinner.cpp"
 			  "src/philosopher.cpp")
 
+# Set name of source group for generated files
+#source_group("Generated Files" ${AUTOGEN_SOURCE_GROUP})
+
 # Set include directories
 include_directories("src" ${COMMON_INCLUDE_DIRECTORY})
 
