Fix Generated Files groups

--- a/dphGui/CMakeLists.txt
+++ b/dphGui/CMakeLists.txt
@@ -41,7 +41,7 @@ set(QRC_FILES	src/resources.qrc)
 source_group("Resource Files" FILES ${QRC_FILES})
 
 # Set name of source group for generated files
-#source_group("Generated Files" ${AUTOGEN_SOURCE_GROUP})
+source_group("Generated Files" ${AUTOGEN_SOURCE_GROUP})
 
 # Set include directories
 include_directories("src" ${COMMON_INCLUDE_DIRECTORY})
