Added language translation mechanism

--- a/dphGui/CMakeLists.txt
+++ b/dphGui/CMakeLists.txt
@@ -12,7 +12,7 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
 # Find necessary Qt packages
-find_package(Qt5 COMPONENTS Core Gui Widgets CONFIG REQUIRED)
+find_package(Qt5 COMPONENTS Core Gui Widgets LinguistTools CONFIG REQUIRED)
 
 # Set source files to build
 set(H_FILES src/mainwindow.h
@@ -35,13 +35,25 @@ set(CPP_FILES	src/mainwindow.cpp
 				src/scenesettingswidget.cpp
 				src/visualsettingswidget.cpp)
 
+# Set Qt resources files
 set(QRC_FILES	src/resources.qrc)
 
+# Set Qt Linguist translation files
+set(TS_FILES	src/translations/english.ts
+				src/translations/russian.ts)
+				
 # Set source group for .qrc files
 source_group("Resource Files" FILES ${QRC_FILES})
 
 # Set name of source group for generated files
 source_group("Generated Files" ${AUTOGEN_SOURCE_GROUP})
+
+# Create .qm files from .ts files
+qt5_create_translation(QM_FILES ${CPP_FILES} ${TS_FILES})
+
+# Add custom target for generating and updating translation files
+set(dphTranslate dphTranslate)
+add_custom_target(${dphTranslate} DEPENDS ${QM_FILES})
 
 # Set include directories
 include_directories("src" ${COMMON_INCLUDE_DIRECTORY})
@@ -55,6 +67,9 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${dph_OUTPUT_FOLDER})
 
 # Set build target
 add_executable(${dphGui_PROJECT} WIN32 ${H_FILES} ${CPP_FILES} ${QRC_FILES})
+
+# Set dependency on translation target
+add_dependencies(${dphGui_PROJECT} ${dphTranslate})
 
 # Set dependencies to link
 target_link_libraries(${dphGui_PROJECT} ${dphCore_PROJECT} Qt5::Core Qt5::Gui Qt5::Widgets)
