Added CPack directives to create .zip archive

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,17 @@ add_subdirectory(dphCore)
 add_subdirectory(dphGui)
 
 set_property(DIRECTORY dphGui PROPERTY VS_STARTUP_PROJECT dphGui)
+
+# Set CPack properties
+set(CPACK_PACKAGE_NAME "Dining philosophers")
+set(CPACK_PACKAGE_VENDOR "IZhuravlev")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Dining philosophers problem simulation")
+set(CPACK_PACKAGE_VERSION "1.0.1")
+set(CPACK_PACKAGE_VERSION_MAJOR "1")
+set(CPACK_PACKAGE_VERSION_MINOR "0")
+set(CPACK_PACKAGE_VERSION_PATCH "1")
+set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CPACK_PACKAGE_NAME})
+set(CPACK_VERBATIM_VARIABLES YES)
+set(CPACK_GENERATOR ZIP)
+
+include (CPack)
