Added basic IFW installer build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,7 @@ add_subdirectory(dphGui)
 
 set_property(DIRECTORY dphGui PROPERTY VS_STARTUP_PROJECT dphGui)
 
-# Set CPack properties
-set(QTIFW_DIR "C:/Qt/QtIFW-3.0.6" CACHE PATH "Path to Qt Installer Framework")
-
+# Set general CPack properties
 set(CPACK_PACKAGE_NAME "DiningPhilosophers")
 set(CPACK_PACKAGE_VENDOR "IZhuravlev")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Dining Philosophers")
@@ -24,12 +22,26 @@ set(CPACK_PACKAGE_VERSION_PATCH "1")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CPACK_PACKAGE_NAME})
 set(CPACK_VERBATIM_VARIABLES YES)
 
-# Set IFW specific options
-set(CPACK_IFW_ROOT ${QTIFW_DIR})
-set(CPACK_IFW_PACKAGE_ALLOW_SPACE_IN_PATH ON)
-set(CPACK_IFW_PACKAGE_ALLOW_NON_ASCII_CHARACTERS ON)
-set(CPACK_IFW_PACKAGE_WIZARD_STYLE Modern)
+# Enable package to .zip file
+set(CPACK_GENERATOR ZIP)
 
-set(CPACK_GENERATOR ZIP IFW)
+# Enable IFW installer build
+option(BUILD_IFW_INSTALLER OFF)
+
+# Set IFW specific options
+if(BUILD_IFW_INSTALLER)
+	include (CPackIFW)
+	set(QTIFW_DIR "C:/Qt/Tools/QtInstallerFramework/3.0/" CACHE PATH "Path to Qt Installer Framework")
+
+	set(CPACK_IFW_ROOT ${QTIFW_DIR})
+	set(CPACK_IFW_PRODUCT_URL "https://github.com/ivzhuravlev/dining_philosophers")
+	set(CPACK_IFW_PACKAGE_TITLE "Dining Philosophers")
+	set(CPACK_IFW_PACKAGE_ALLOW_SPACE_IN_PATH ON)
+	set(CPACK_IFW_PACKAGE_ALLOW_NON_ASCII_CHARACTERS ON)
+	set(CPACK_IFW_PACKAGE_WIZARD_STYLE Modern)
+	set(CPACK_IFW_PACKAGE_CONTROL_SCRIPT "${CMAKE_SOURCE_DIR}/scripts/controlscript.qs")
+
+	list(APPEND CPACK_GENERATOR IFW)
+endif()
+
 include (CPack)
-include (CPackIFW)
