--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,12 +31,12 @@ matrix:
     - image: Visual Studio 2015
       platform: x64
       GENERATOR: "Visual Studio 15 2017 Win64"
-      QTDIR: "C:\Qt\5.11.2\msvc2017_64\lib\cmake\Qt5"
+      QTDIR: "C:\\Qt\\5.11.2\\msvc2017_64\\lib\\cmake\\Qt5"
       
     - image: Visual Studio 2017
       platform: x86
       GENERATOR: "Visual Studio 14 2015"
-      QTDIR: "C:\Qt\5.11.2\msvc2015\lib\cmake\Qt5"
+      QTDIR: "C:\\Qt\\5.11.2\\msvc2015\\lib\\cmake\\Qt5"
   
 before_build:
   - cmake -G%GENERATOR% -DCMAKE_PREFIX_PATH=%QTDIR% -DBUILD_SHARED_LIBS=ON -H. -Bbuild
