Change Appveyor script

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ image:
   - Visual Studio 2017
 
 platform:
-  - x86
+  - Win32
   - x64
 
 configuration:
@@ -34,7 +34,12 @@ matrix:
       QTDIR: "C:\\Qt\\5.11.2\\msvc2017_64\\lib\\cmake\\Qt5"
       
     - image: Visual Studio 2015
-      platform: x86
+      platform: x64
+      GENERATOR: "Visual Studio 14 2015"
+      QTDIR: "C:\\Qt\\5.11.2\\msvc2015\\lib\\cmake\\Qt5"
+      
+    - image: Visual Studio 2015
+      platform: Win32
       GENERATOR: "Visual Studio 15 2017 Win64"
       QTDIR: "C:\\Qt\\5.11.2\\msvc2017_64\\lib\\cmake\\Qt5"
       
@@ -44,8 +49,13 @@ matrix:
       QTDIR: "C:\\Qt\\5.11.2\\msvc2015\\lib\\cmake\\Qt5"
       
     - image: Visual Studio 2017
-      platform: x86
+      platform: Win32
       GENERATOR: "Visual Studio 14 2015"
+      QTDIR: "C:\\Qt\\5.11.2\\msvc2015\\lib\\cmake\\Qt5"
+      
+    - image: Visual Studio 2017
+      platform: Win32
+      GENERATOR: "Visual Studio 15 2017"
       QTDIR: "C:\\Qt\\5.11.2\\msvc2015\\lib\\cmake\\Qt5"
   
 before_build:
