--- a/appveyor.yml
+++ b/appveyor.yml
@@ -56,7 +56,7 @@ matrix:
     - image: Visual Studio 2017
       platform: Win32
       GENERATOR: "Visual Studio 15 2017"
-      QTDIR: "C:\\Qt\\5.11.2\\msvc2015\\lib\\cmake\\Qt5"
+      QTDIR: "C:\\Qt\\5.11.2\\msvc2015_x64\\lib\\cmake\\Qt5"
   
 before_build:
   - cmake "-G%GENERATOR%" -DCMAKE_PREFIX_PATH="%QTDIR%" -DBUILD_SHARED_LIBS=ON -H. -Bbuild
